Fix layout shift caused by transform overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -104,6 +104,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 *, *::before, *::after {
@@ -113,6 +114,7 @@ html {
 body {
   font-family: var(--font-stack-body);
   color: var(--color-lightest);
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4 {
